--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 /* Reset styles */
+
 ul,
 ol {
   list-style-type: none;
@@ -46,6 +47,7 @@ img {
 }
 
 /* Styles */
+
 .container {
   width: 1158px;
   padding-left: 15px;
@@ -53,6 +55,8 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* Header section */
 
 .header-section {
   background-color: #ffffff;
@@ -91,6 +95,8 @@ img {
 .logo-span {
   color: #2e2f42;
 }
+
+/* Nav section */
 
 .nav-list {
   display: flex;
@@ -160,6 +166,8 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Hero section */
+
 .hero-section {
   padding: 188px 0;
   background-color: #2e2f42;
@@ -174,9 +182,6 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.hero-container {
 }
 
 .title-main {
@@ -213,6 +218,8 @@ img {
 .custom-button:focus {
   background-color: #404bbf;
 }
+
+/* Target section */
 
 .target-section {
   padding: 120px 0;
@@ -257,9 +264,6 @@ img {
   margin-bottom: 8px;
 }
 
-.target-icon {
-}
-
 .target-goal {
   font-weight: 500;
   font-size: 20px;
@@ -287,6 +291,8 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/* Team section */
 
 .team-section {
   background-color: #f4f4fd;
@@ -381,6 +387,8 @@ img {
   fill: currentColor;
 }
 
+/* Portfolio section */
+
 .portfolio-section {
   padding: 120px 0;
 }
@@ -466,6 +474,8 @@ img {
   border-top: none;
 }
 
+/* Footer section */
+
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
@@ -503,6 +513,8 @@ img {
   color: #f4f4fd;
   width: 264px;
 }
+
+/* Footer socials */
 
 .footer-socials {
   width: 208px;
@@ -548,5 +560,187 @@ img {
   background-color: #31d0aa;
 }
 
-.socials-icon {
+/* Footer form */
+
+.footer-sbs {
+  margin-left: auto;
+}
+
+.sbs-caption {
+  margin-bottom: 16px;
+
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.sbs-form {
+  display: flex;
+
+  align-items: center;
+  gap: 24px;
+}
+
+.sbs-form-field {
+}
+
+.sbs-form-input {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+
+  outline: transparent;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.sbs-form-input::placeholder {
+  color: currentColor;
+}
+
+.sbs-form-btn {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 8px 24px;
+
+  color: #ffffff;
+  text-align: center;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  border: none;
+  border-radius: 4px;
+  background: #4d5ae5;
+}
+
+/* Backdrop */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+/* Modal section */
+
+.modal {
+  position: relative;
+
+  width: 408px;
+  min-height: 584px;
+  flex-shrink: 0;
+  padding: 24px;
+
+  border-radius: 4px;
+  background-color: #fcfcfc;
+}
+
+.modal-btn {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+
+  color: #2e2f42;
+}
+
+.modal-btn-icon {
+  stroke: currentColor;
+}
+
+.modal-caption {
+  color: #2e2f42;
+  text-align: center;
+  margin-top: 24px;
+  margin-bottom: 16px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+
+  color: #8e8f99;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: none;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+
+  fill: #2e2f42;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-message {
+  width: 100%;
+  resize: vertical;
 }
