--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ img {
   background-color: #4d5ae5;
   display: block;
   min-width: 169px;
-  height: 56px;
+  min-height: 56px;
   border: none;
   gap: 10px;
   border-radius: 4px;
@@ -582,9 +582,6 @@ img {
   gap: 24px;
 }
 
-.sbs-form-field {
-}
-
 .sbs-form-input {
   width: 264px;
   height: 40px;
@@ -672,15 +669,29 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
 
   width: 24px;
   height: 24px;
 
   color: #2e2f42;
+  background-color: #e7e9fc;
+  outline: none;
+  border-color: transparent;
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
 }
 
 .modal-btn-icon {
-  stroke: currentColor;
+  fill: #2e2f42;
+}
+
+.modal-btn-icon:hover,
+.modal-btn-icon:focus {
+  fill: #ffffff;
 }
 
 .modal-caption {
@@ -693,6 +704,10 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
+/* .form-wrapper {
+  margin-bottom: 8px;
+} */
 
 .form-label {
   display: block;
@@ -742,5 +757,99 @@ img {
 
 .form-message {
   width: 100%;
-  resize: vertical;
+  padding: 8px 16px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+
+  outline: transparent;
+  resize: none;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-message:focus {
+  border-color: #4d5ae5;
+}
+
+.form-message::placeholder {
+  color: currentColor;
+}
+
+/* Checkbox button */
+
+.form-agreement {
+  display: block;
+  margin-bottom: 24px;
+
+  color: #8e8f99;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+
+  user-select: none;
+}
+
+.form-agreement-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+
+.checkbox:checked + .form-agreement-checkbox {
+  background-color: #404bbf;
+}
+
+.form-agreement-icon {
+  opacity: 0;
+}
+
+.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon {
+  opacity: 1;
+}
+
+.form-agreement-link {
+  font-size: 12px;
+
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+  color: #4d5ae5;
+
+  cursor: pointer;
+}
+
+.form-button {
+  min-width: 169px;
+  min-height: 56px;
+  padding: 16px 32px;
+
+  color: #ffffff;
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
