--- a/css/styles.css
+++ b/css/styles.css
@@ -607,6 +607,8 @@ img {
 .sbs-form-btn {
   display: flex;
   align-items: center;
+  justify-content: center;
+  min-width: 165px;
   gap: 16px;
   padding: 8px 24px;
 
@@ -620,6 +622,10 @@ img {
   border: none;
   border-radius: 4px;
   background: #4d5ae5;
+}
+
+.sbs-form-icon {
+  margin-left: 16px;
 }
 
 /* Backdrop */
@@ -637,7 +643,8 @@ img {
   height: 100vh;
   background-color: rgba(46, 47, 66, 0.4);
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   opacity: 0;
   visibility: hidden;
@@ -653,40 +660,58 @@ img {
 /* Modal section */
 
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 
   width: 408px;
   min-height: 584px;
   flex-shrink: 0;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 
   border-radius: 4px;
   background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   margin-left: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  padding: 0;
 
   width: 24px;
   height: 24px;
 
   color: #2e2f42;
   background-color: #e7e9fc;
-  outline: none;
-  border-color: transparent;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-btn-icon {
+  width: 8px;
+  height: 8px;
+
   fill: #2e2f42;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-icon:hover,
@@ -705,16 +730,16 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* .form-wrapper {
+.form-wrapper {
   margin-bottom: 8px;
-} */
+}
 
 .form-label {
   display: block;
   margin-bottom: 4px;
 
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 
   color: #8e8f99;
@@ -733,6 +758,8 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: none;
 
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -748,23 +775,29 @@ img {
 
   fill: #2e2f42;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
 
+.form-wrapper {
+  margin-bottom: 16px;
+}
+
 .form-message {
   width: 100%;
+  height: 120px;
   padding: 8px 16px;
 
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
 
   color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 
   outline: transparent;
