--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,7 @@ img {
 
 .modal-btn:hover,
 .modal-btn:focus {
+  color: #ffffff;
   background-color: #404bbf;
   border: none;
 }
@@ -709,14 +710,9 @@ img {
   width: 8px;
   height: 8px;
 
-  fill: #2e2f42;
+  fill: currentColor;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-btn-icon:hover,
-.modal-btn-icon:focus {
-  fill: #ffffff;
 }
 
 .modal-caption {
@@ -816,16 +812,19 @@ img {
 
 /* Checkbox button */
 
+.form-checkbox {
+  margin-bottom: 24px;
+}
+
 .form-agreement {
   display: block;
   margin-bottom: 24px;
 
-  color: #8e8f99;
-
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 
+  color: #8e8f99;
   user-select: none;
 }
 
@@ -838,23 +837,20 @@ img {
   height: 16px;
   margin-right: 8px;
 
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
+  fill: transparent;
 }
 
-.checkbox:checked + .form-agreement-checkbox {
+.checkbox:checked + .form-agreement > .form-agreement-checkbox {
   background-color: #404bbf;
-}
-
-.form-agreement-icon {
-  opacity: 0;
-}
-
-.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon {
-  opacity: 1;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .form-agreement-link {
@@ -870,7 +866,7 @@ img {
 
 .form-button {
   min-width: 169px;
-  min-height: 56px;
+  height: 56px;
   padding: 16px 32px;
 
   color: #ffffff;
@@ -882,7 +878,10 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: none;
   border-radius: 4px;
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
